--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Paseos Virtuales",
-  "name": "Paseos Virtuales",
+  "short_name": "Paseo Virtual",
+  "name": "Paseo Virtual",
   "icons": [
     {
       "src": "favicon.ico",
